--- a/scripts/visualize.ipynb
+++ b/scripts/visualize.ipynb
@@ -36,18 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14d4c2950cc74126b5c09549aa822668",
+       "model_id": "2dab1a59fba94c83bb3993d807a79cee",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='step', max=9), Output()), _dom_classes=('widget-interact…"
+       "interactive(children=(IntSlider(value=0, description='step', max=240), Output()), _dom_classes=('widget-intera…"
       ]
      },
      "metadata": {},
@@ -58,10 +58,13 @@
     "with open(\"../trace.json\") as f:\n",
     "    trace = json.load(f)\n",
     "    \n",
-    "def f(step=widgets.IntSlider(min=0, max=len(trace)-1, step=1, value=0)):\n",
+    "def f(step=widgets.IntSlider(min=0, max=len(trace), step=1, value=0)):\n",
     "    b = chess.Board()\n",
     "    for move in trace[0:step]:\n",
     "        b.push(chess.Move.from_uci(move[0]))\n",
+    "\n",
+    "    if step == len(trace):\n",
+    "        return b\n",
     "        \n",
     "    num_acts = [n for n, _ in trace[step][2]]\n",
     "    sum_num = sum(num_acts) + 1e-4\n",
