--- a/scripts/visualize.ipynb
+++ b/scripts/visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "from matplotlib import colormaps\n",
     "\n",
     "import json\n",
+    "import math\n",
     "import chess"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,13 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e75f9a3714a946889bb906d9b176ad25",
+       "model_id": "45862570518347169e5395498b644583",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,42 +88,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'termination': 'Checkmate', 'winner': 'White'}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "outcome"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(Move.from_uci('g1f1'), 0.999998780489292, -5.691145896911621, 82)]"
+       "[(Move.from_uci('a1e5'), 0.15999936000256, -2.0, 4),\n",
+       " (Move.from_uci('a1b2'), 0.11999952000191999, -1.0, 3),\n",
+       " (Move.from_uci('d3e4'), 0.07999968000128, 0.0, 2),\n",
+       " (Move.from_uci('d3e3'), 0.07999968000128, 0.0, 2),\n",
+       " (Move.from_uci('d3c2'), 0.07999968000128, 0.0, 2),\n",
+       " (Move.from_uci('a1g7'), 0.07999968000128, 0.0, 2),\n",
+       " (Move.from_uci('a1f6'), 0.07999968000128, 0.0, 2),\n",
+       " (Move.from_uci('a1d4'), 0.07999968000128, 0.0, 2),\n",
+       " (Move.from_uci('a1c3'), 0.07999968000128, 0.0, 2),\n",
+       " (Move.from_uci('f3f4'), 0.07999968000128, 0.0, 2),\n",
+       " (Move.from_uci('d3d4'), 0.03999984000064, 1.0, 1),\n",
+       " (Move.from_uci('a1h8'), 0.03999984000064, 1.0, 1)]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "step = 66\n",
+    "step = 160\n",
     "b = chess.Board()\n",
     "for move in steps[0:step]:\n",
     "    b.push(chess.Move.from_uci(move[0]))\n",
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,14 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Outcome(termination=<Termination.INSUFFICIENT_MATERIAL: 3>, winner=None)\n"
+      "None\n"
      ]
     }
    ],
@@ -165,53 +166,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outcome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import chess\n",
-    "with open(\"../trace0.json\", \"r\") as f:\n",
+    "import libencoder\n",
+    "\n",
+    "with open(\"../trace1.json\", \"r\") as f:\n",
     "    trace = json.load(f)\n",
     "\n",
     "outcome = trace[\"outcome\"]\n",
-    "steps = [chess.Move.from_uci(step[0]) for step in trace[\"steps\"]]\n",
+    "steps = [(chess.Move.from_uci(step[0]), []) for step in trace[\"steps\"]]\n",
     "\n",
     "ds = libencoder.encode(steps)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((8, 8, 112), (8, 8, 7))"
+       "<module 'libencoder' from '/home2/jiasen/workspace/smart-chess-rust/target/release/libencoder.so'>"
       ]
      },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ds[0][0].shape, ds[0][1].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'train' from '/home2/jiasen/workspace/smart-chess-rust/scripts/train.py'>"
-      ]
-     },
-     "execution_count": 42,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,55 +211,145 @@
    "source": [
     "from importlib import reload\n",
     "import train\n",
-    "reload(train)"
+    "import libencoder\n",
+    "reload(train)\n",
+    "reload(libencoder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "..loading checkpoint:  ../runs/6/tb_logs/chess/version_1/checkpoints/epoch=3-step=2052.ckpt\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import nn\n",
+    "model = nn.load_model(device=\"cpu\", checkpoint=\"../runs/6/tb_logs/chess/version_1/checkpoints/epoch=3-step=2052.ckpt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = train.ChessDataset(\"../trace0.json\")"
+    "def infer(fn, index):\n",
+    "    ds = train.ChessDataset(fn)\n",
+    "\n",
+    "    board_enc = ds[index][0]\n",
+    "    moves_enc = ds.steps[index][3]\n",
+    "  \n",
+    "    pi, value = model(board_enc.unsqueeze(0))\n",
+    "    pi = torch.exp(pi.detach()).squeeze()\n",
+    "\n",
+    "    pi = pi[moves_enc]\n",
+    "    pi = pi / pi.sum()\n",
+    "\n",
+    "    value = value.detach().squeeze()\n",
+    "    return pi, value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../trace1.json\") as f:\n",
+    "    trace = json.load(f)\n",
+    "    \n",
+    "step = 100\n",
+    "prior, value = infer(\"../trace1.json\", step)\n",
+    "total_n = sum([n for n, _ in trace[\"steps\"][step][2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[8, -0.545457124710083],\n",
-       " [4, -0.26363980770111084],\n",
-       " [3, -0.19901640713214874],\n",
-       " [5, -0.3374854326248169],\n",
-       " [6, -0.39405208826065063],\n",
-       " [5, -0.3272572159767151],\n",
-       " [3, -0.1917077898979187],\n",
-       " [3, -0.1917077898979187],\n",
-       " [3, -0.1917077898979187],\n",
-       " [3, -0.1917077898979187],\n",
-       " [3, -0.1917077898979187],\n",
-       " [2, -0.12491290271282196],\n",
-       " [1, -0.05811801925301552],\n",
-       " [4, -0.25850266218185425],\n",
-       " [2, -0.12491290271282196],\n",
-       " [6, -0.3960117697715759],\n",
-       " [4, -0.26046234369277954],\n",
-       " [3, -0.1917077898979187],\n",
-       " [5, -0.3272572159767151],\n",
-       " [6, -0.3899209499359131]]"
+       "(55,\n",
+       " tensor([0.0843, 0.0286, 0.0785, 0.0128, 0.0233, 0.0453, 0.0219, 0.0333, 0.0152,\n",
+       "         0.0282, 0.0252, 0.0191, 0.0519, 0.0927, 0.0470, 0.0119, 0.0730, 0.0709,\n",
+       "         0.0147, 0.0299, 0.0233, 0.0230, 0.0237, 0.0220, 0.0530, 0.0232, 0.0240]))"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trace[\"steps\"][0][2]"
+    "total_n, prior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def uct(prior, total_n, q_value, current_n, reverse, cpuct):\n",
+    "    award = q_value / (current_n + 1e-5) * (-1 if reverse else 1)\n",
+    "    exploration = math.sqrt(total_n) / (1 + current_n) * prior * cpuct\n",
+    "    return (f\"{award + exploration:0.2f}\", f\"{award:0.2f}\", f\"{exploration:0.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 0.0, '0.08', ('1.67', '0.00', '1.67')),\n",
+       " (2, 0.0, '0.03', ('0.57', '0.00', '0.57')),\n",
+       " (3, -1.0, '0.08', ('0.83', '-0.33', '1.16')),\n",
+       " (2, 0.0, '0.01', ('0.25', '0.00', '0.25')),\n",
+       " (2, 0.0, '0.02', ('0.46', '0.00', '0.46')),\n",
+       " (2, 0.0, '0.05', ('0.90', '0.00', '0.90')),\n",
+       " (3, -1.0, '0.02', ('-0.01', '-0.33', '0.33')),\n",
+       " (3, -1.0, '0.03', ('0.16', '-0.33', '0.49')),\n",
+       " (2, 0.0, '0.02', ('0.30', '0.00', '0.30')),\n",
+       " (2, 0.0, '0.03', ('0.56', '0.00', '0.56')),\n",
+       " (2, 0.0, '0.03', ('0.50', '0.00', '0.50')),\n",
+       " (2, 0.0, '0.02', ('0.38', '0.00', '0.38')),\n",
+       " (2, 0.0, '0.05', ('1.03', '0.00', '1.03')),\n",
+       " (1, 1.0, '0.09', ('3.75', '1.00', '2.75')),\n",
+       " (2, 0.0, '0.05', ('0.93', '0.00', '0.93')),\n",
+       " (2, 0.0, '0.01', ('0.23', '0.00', '0.23')),\n",
+       " (2, 0.0, '0.07', ('1.44', '0.00', '1.44')),\n",
+       " (2, 0.0, '0.07', ('1.40', '0.00', '1.40')),\n",
+       " (3, -1.0, '0.01', ('-0.12', '-0.33', '0.22')),\n",
+       " (2, 0.0, '0.03', ('0.59', '0.00', '0.59')),\n",
+       " (1, 1.0, '0.02', ('1.69', '1.00', '0.69')),\n",
+       " (1, 1.0, '0.02', ('1.68', '1.00', '0.68')),\n",
+       " (2, 0.0, '0.02', ('0.47', '0.00', '0.47')),\n",
+       " (2, 0.0, '0.02', ('0.44', '0.00', '0.44')),\n",
+       " (3, -1.0, '0.05', ('0.45', '-0.33', '0.79')),\n",
+       " (1, 1.0, '0.02', ('1.69', '1.00', '0.69')),\n",
+       " (2, 0.0, '0.02', ('0.47', '0.00', '0.47'))]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(n, q, f\"{prior[i].item():0.2f}\", uct(prior[i].item(), total_n, q, n, False, 8)) for i, (n, q) in enumerate(trace[\"steps\"][step][2])]"
    ]
   },
   {
