--- a/scripts/visualize.ipynb
+++ b/scripts/visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,18 +37,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filename = \"../runs/69/trace1.json\"\n",
+    "filename = \"../trace1.json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45862570518347169e5395498b644583",
+       "model_id": "33a2ed74e9e04dda861672833ed28368",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='step', max=200), Output()), _dom_classes=('widget-intera…"
+       "interactive(children=(IntSlider(value=0, description='step', max=300), Output()), _dom_classes=('widget-intera…"
       ]
      },
      "metadata": {},
@@ -56,7 +66,7 @@
     }
    ],
    "source": [
-    "with open(\"../trace1.json\") as f:\n",
+    "with open(filename) as f:\n",
     "    trace = json.load(f)\n",
     "\n",
     "outcome = trace[\"outcome\"]\n",
@@ -88,51 +98,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'termination': 'Checkmate', 'winner': 'Black'}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "outcome"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def replay(trace, step):\n",
+    "    steps = trace[\"steps\"]\n",
+    "    b = chess.Board()\n",
+    "    for move in steps[0:step]:\n",
+    "        b.push(chess.Move.from_uci(move[0]))\n",
+    "\n",
+    "    num_acts = [n for n, _ in steps[step][2]]\n",
+    "    q_values = [v for _, v in steps[step][2]]\n",
+    "    sum_num = sum(num_acts) + 1e-4\n",
+    "    score = [v / sum_num for v in num_acts]\n",
+    "    return list(zip(b.legal_moves, score, q_values, num_acts))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(Move.from_uci('a1e5'), 0.15999936000256, -2.0, 4),\n",
-       " (Move.from_uci('a1b2'), 0.11999952000191999, -1.0, 3),\n",
-       " (Move.from_uci('d3e4'), 0.07999968000128, 0.0, 2),\n",
-       " (Move.from_uci('d3e3'), 0.07999968000128, 0.0, 2),\n",
-       " (Move.from_uci('d3c2'), 0.07999968000128, 0.0, 2),\n",
-       " (Move.from_uci('a1g7'), 0.07999968000128, 0.0, 2),\n",
-       " (Move.from_uci('a1f6'), 0.07999968000128, 0.0, 2),\n",
-       " (Move.from_uci('a1d4'), 0.07999968000128, 0.0, 2),\n",
-       " (Move.from_uci('a1c3'), 0.07999968000128, 0.0, 2),\n",
-       " (Move.from_uci('f3f4'), 0.07999968000128, 0.0, 2),\n",
-       " (Move.from_uci('d3d4'), 0.03999984000064, 1.0, 1),\n",
-       " (Move.from_uci('a1h8'), 0.03999984000064, 1.0, 1)]"
+       "[(Move.from_uci('a6c4'), 0.11797746181041471, -3.0, 21),\n",
+       " (Move.from_uci('a3b4'), 0.07303366683501863, 1.0, 13),\n",
+       " (Move.from_uci('a6c8'), 0.0561797437192451, 0.0, 10),\n",
+       " (Move.from_uci('a6e2'), 0.0561797437192451, 0.0, 10),\n",
+       " (Move.from_uci('a6b7'), 0.05056176934732059, 1.0, 9),\n",
+       " (Move.from_uci('b3c3'), 0.05056176934732059, -1.0, 9),\n",
+       " (Move.from_uci('a6g6'), 0.04494379497539608, -2.0, 8),\n",
+       " (Move.from_uci('a6a5'), 0.04494379497539608, 2.0, 8),\n",
+       " (Move.from_uci('a6b6'), 0.03932582060347157, -1.0, 7),\n",
+       " (Move.from_uci('a6b5'), 0.03932582060347157, -1.0, 7),\n",
+       " (Move.from_uci('a6f1'), 0.03932582060347157, -1.0, 7),\n",
+       " (Move.from_uci('a6e6'), 0.03370784623154706, -2.0, 6),\n",
+       " (Move.from_uci('a3b2'), 0.03370784623154706, 0.0, 6),\n",
+       " (Move.from_uci('a6a8'), 0.02808987185962255, -1.0, 5),\n",
+       " (Move.from_uci('a6a7'), 0.02808987185962255, -1.0, 5),\n",
+       " (Move.from_uci('a6f6'), 0.02808987185962255, -1.0, 5),\n",
+       " (Move.from_uci('a6d6'), 0.02808987185962255, -1.0, 5),\n",
+       " (Move.from_uci('a6d3'), 0.02808987185962255, -1.0, 5),\n",
+       " (Move.from_uci('a4e8'), 0.02808987185962255, -1.0, 5),\n",
+       " (Move.from_uci('a4d7'), 0.02808987185962255, -1.0, 5),\n",
+       " (Move.from_uci('a3a2'), 0.02808987185962255, -1.0, 5),\n",
+       " (Move.from_uci('d5d6'), 0.02808987185962255, -1.0, 5),\n",
+       " (Move.from_uci('a6h6'), 0.01685392311577353, -1.0, 3),\n",
+       " (Move.from_uci('a6c6'), 0.01685392311577353, -1.0, 3),\n",
+       " (Move.from_uci('a4c6'), 0.01685392311577353, -1.0, 3),\n",
+       " (Move.from_uci('a4b5'), 0.01685392311577353, -1.0, 3)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "step = 160\n",
-    "b = chess.Board()\n",
-    "for move in steps[0:step]:\n",
-    "    b.push(chess.Move.from_uci(move[0]))\n",
-    "    \n",
-    "num_acts = [n for n, _ in steps[step][2]]\n",
-    "q_values = [v for _, v in steps[step][2]]\n",
-    "sum_num = sum(num_acts) + 1e-4\n",
-    "score = [v / sum_num for v in num_acts]\n",
-    "distr = sorted(zip(b.legal_moves, score, q_values, num_acts), key=lambda p: p[1], reverse=True)\n",
+    "distr = replay(trace, 230)\n",
+    "distr = sorted(distr, key=lambda p: p[1], reverse=True)\n",
     "distr"
    ]
   },
@@ -149,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -166,16 +212,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'termination': 'Checkmate', 'winner': 'Black'}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "outcome"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +260,7 @@
        "<module 'libencoder' from '/home2/jiasen/workspace/smart-chess-rust/target/release/libencoder.so'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,26 +275,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..loading checkpoint:  ../runs/6/tb_logs/chess/version_1/checkpoints/epoch=3-step=2052.ckpt\n"
+      "..loading checkpoint:  ../runs/121/tb_logs/chess/version_0/checkpoints/epoch=2-step=3126.ckpt\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
     "import nn\n",
-    "model = nn.load_model(device=\"cpu\", checkpoint=\"../runs/6/tb_logs/chess/version_1/checkpoints/epoch=3-step=2052.ckpt\")"
+    "model = nn.load_model(device=\"cpu\", checkpoint=\"../runs/121/tb_logs/chess/version_0/checkpoints/epoch=2-step=3126.ckpt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,33 +316,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "skipping cudagraphs for unknown reason\n"
+     ]
+    }
+   ],
    "source": [
-    "with open(\"../trace1.json\") as f:\n",
+    "with open(filename) as f:\n",
     "    trace = json.load(f)\n",
     "    \n",
-    "step = 100\n",
-    "prior, value = infer(\"../trace1.json\", step)\n",
-    "total_n = sum([n for n, _ in trace[\"steps\"][step][2]])"
+    "step = 230\n",
+    "prior, value = infer(filename, step)\n",
+    "total_n = sum([n for n, _ in trace[\"steps\"][step][2]])\n",
+    "\n",
+    "distr = replay(trace, step)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(55,\n",
-       " tensor([0.0843, 0.0286, 0.0785, 0.0128, 0.0233, 0.0453, 0.0219, 0.0333, 0.0152,\n",
-       "         0.0282, 0.0252, 0.0191, 0.0519, 0.0927, 0.0470, 0.0119, 0.0730, 0.0709,\n",
-       "         0.0147, 0.0299, 0.0233, 0.0230, 0.0237, 0.0220, 0.0530, 0.0232, 0.0240]))"
+       "(178,\n",
+       " tensor([0.0327, 0.0037, 0.0161, 0.0025, 0.0546, 0.1160, 0.0126, 0.0099, 0.0118,\n",
+       "         0.1965, 0.0166, 0.0030, 0.0776, 0.0054, 0.0264, 0.0088, 0.0096, 0.0798,\n",
+       "         0.0512, 0.0961, 0.0037, 0.0646, 0.0112, 0.0364, 0.0198, 0.0334]))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +363,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next_moves = [n[0] for n in distr]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,48 +384,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(2, 0.0, '0.08', ('1.67', '0.00', '1.67')),\n",
-       " (2, 0.0, '0.03', ('0.57', '0.00', '0.57')),\n",
-       " (3, -1.0, '0.08', ('0.83', '-0.33', '1.16')),\n",
-       " (2, 0.0, '0.01', ('0.25', '0.00', '0.25')),\n",
-       " (2, 0.0, '0.02', ('0.46', '0.00', '0.46')),\n",
-       " (2, 0.0, '0.05', ('0.90', '0.00', '0.90')),\n",
-       " (3, -1.0, '0.02', ('-0.01', '-0.33', '0.33')),\n",
-       " (3, -1.0, '0.03', ('0.16', '-0.33', '0.49')),\n",
-       " (2, 0.0, '0.02', ('0.30', '0.00', '0.30')),\n",
-       " (2, 0.0, '0.03', ('0.56', '0.00', '0.56')),\n",
-       " (2, 0.0, '0.03', ('0.50', '0.00', '0.50')),\n",
-       " (2, 0.0, '0.02', ('0.38', '0.00', '0.38')),\n",
-       " (2, 0.0, '0.05', ('1.03', '0.00', '1.03')),\n",
-       " (1, 1.0, '0.09', ('3.75', '1.00', '2.75')),\n",
-       " (2, 0.0, '0.05', ('0.93', '0.00', '0.93')),\n",
-       " (2, 0.0, '0.01', ('0.23', '0.00', '0.23')),\n",
-       " (2, 0.0, '0.07', ('1.44', '0.00', '1.44')),\n",
-       " (2, 0.0, '0.07', ('1.40', '0.00', '1.40')),\n",
-       " (3, -1.0, '0.01', ('-0.12', '-0.33', '0.22')),\n",
-       " (2, 0.0, '0.03', ('0.59', '0.00', '0.59')),\n",
-       " (1, 1.0, '0.02', ('1.69', '1.00', '0.69')),\n",
-       " (1, 1.0, '0.02', ('1.68', '1.00', '0.68')),\n",
-       " (2, 0.0, '0.02', ('0.47', '0.00', '0.47')),\n",
-       " (2, 0.0, '0.02', ('0.44', '0.00', '0.44')),\n",
-       " (3, -1.0, '0.05', ('0.45', '-0.33', '0.79')),\n",
-       " (1, 1.0, '0.02', ('1.69', '1.00', '0.69')),\n",
-       " (2, 0.0, '0.02', ('0.47', '0.00', '0.47'))]"
+       "[(Move.from_uci('a6c8'), 10, 0.0, '0.033', ('0.08', '0.00', '0.08')),\n",
+       " (Move.from_uci('a6a8'), 5, -1.0, '0.004', ('-0.18', '-0.20', '0.02')),\n",
+       " (Move.from_uci('a6b7'), 9, 1.0, '0.016', ('0.15', '0.11', '0.04')),\n",
+       " (Move.from_uci('a6a7'), 5, -1.0, '0.003', ('-0.19', '-0.20', '0.01')),\n",
+       " (Move.from_uci('a6h6'), 3, -1.0, '0.055', ('0.03', '-0.33', '0.36')),\n",
+       " (Move.from_uci('a6g6'), 8, -2.0, '0.116', ('0.09', '-0.25', '0.34')),\n",
+       " (Move.from_uci('a6f6'), 5, -1.0, '0.013', ('-0.14', '-0.20', '0.06')),\n",
+       " (Move.from_uci('a6e6'), 6, -2.0, '0.010', ('-0.30', '-0.33', '0.04')),\n",
+       " (Move.from_uci('a6d6'), 5, -1.0, '0.012', ('-0.15', '-0.20', '0.05')),\n",
+       " (Move.from_uci('a6c6'), 3, -1.0, '0.197', ('0.98', '-0.33', '1.31')),\n",
+       " (Move.from_uci('a6b6'), 7, -1.0, '0.017', ('-0.09', '-0.14', '0.06')),\n",
+       " (Move.from_uci('a6b5'), 7, -1.0, '0.003', ('-0.13', '-0.14', '0.01')),\n",
+       " (Move.from_uci('a6a5'), 8, 2.0, '0.078', ('0.48', '0.25', '0.23')),\n",
+       " (Move.from_uci('a6c4'), 21, -3.0, '0.005', ('-0.14', '-0.14', '0.01')),\n",
+       " (Move.from_uci('a6d3'), 5, -1.0, '0.026', ('-0.08', '-0.20', '0.12')),\n",
+       " (Move.from_uci('a6e2'), 10, 0.0, '0.009', ('0.02', '0.00', '0.02')),\n",
+       " (Move.from_uci('a6f1'), 7, -1.0, '0.010', ('-0.11', '-0.14', '0.03')),\n",
+       " (Move.from_uci('a4e8'), 5, -1.0, '0.080', ('0.15', '-0.20', '0.35')),\n",
+       " (Move.from_uci('a4d7'), 5, -1.0, '0.051', ('0.03', '-0.20', '0.23')),\n",
+       " (Move.from_uci('a4c6'), 3, -1.0, '0.096', ('0.31', '-0.33', '0.64')),\n",
+       " (Move.from_uci('a4b5'), 3, -1.0, '0.004', ('-0.31', '-0.33', '0.02')),\n",
+       " (Move.from_uci('b3c3'), 9, -1.0, '0.065', ('0.06', '-0.11', '0.17')),\n",
+       " (Move.from_uci('a3b4'), 13, 1.0, '0.011', ('0.10', '0.08', '0.02')),\n",
+       " (Move.from_uci('a3b2'), 6, 0.0, '0.036', ('0.14', '0.00', '0.14')),\n",
+       " (Move.from_uci('a3a2'), 5, -1.0, '0.020', ('-0.11', '-0.20', '0.09')),\n",
+       " (Move.from_uci('d5d6'), 5, -1.0, '0.033', ('-0.05', '-0.20', '0.15'))]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[(n, q, f\"{prior[i].item():0.2f}\", uct(prior[i].item(), total_n, q, n, False, 8)) for i, (n, q) in enumerate(trace[\"steps\"][step][2])]"
+    "[(next_moves[i], n, q, f\"{prior[i].item():0.3f}\", uct(prior[i].item(), total_n, q, n, False, 2.0)) for i, (n, q) in enumerate(trace[\"steps\"][step][2])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('-0.29', '-0.30', '0.01')"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uct(prior[13].item(), 120, -3.0, 10, False, 2.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "178"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_n"
    ]
   },
   {
